Sun Aug  1  7:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: ([+localizedStringForKey:value:table:]) Fixed so
	that debugging behavior only takes place when NSShowNonLocalizedStrings
	default is 'YES'.

1999-07-29  Adam Fedor  <fedor@gnu.org>

	* config.guess: Updated from latest version + fix for Netwinder.
	* config.sub: Likewise.

	* Headers/gnustep/base/Foundation.h: Include NSPage.h
	* Headers/gnustep/base/NSPortCoder.h: Remove ref to Port.h

Wed Jul 28 15:53:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSObject.m: ([+isKindOfClass:]) Fixed to return NO except
	when both the argument and the receiver are NSObject - as specified
	in the MacOS-X documentation.  Thanks to Helge for pointing this out.

Mon Jul 26 21:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fix cStrings to use unsigned char throughout - to avoid problems
	with character sets other than ascii.  Suggested by Kai Henningsen.
	* Headers/Foundation/NSGCString.h: Use unsigned chars.
	* Source/NSGCString.m: Use unsigned chars.
	* Source/GSeq.h: Use unsigned chars.
	* Source/propList.h: Use unsigned chars.

Fri Jul 23 22:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: Tidy a little and make sure that
	non-blocking mode is reset when a descriptor is closed.
	* Source/NSPortNameServer.mL Fixed error in lookup when host name
	is specified.

Thu Jul 22 13:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTimeZone.m:  ([-initWithOffset:]) bugfix by Kai Henningsen
	* acconfig.h: Removed old libc method of getting NSProcessInfo stuff.
	* aclocal.m4: Removed old libc method of getting NSProcessInfo stuff.
	* configure.in: Added new '/proc' method of getting NSProcessInfo stuff
	by Nico Pero, with modifications and --enable-fake-main
	* Headers/GSConfig.h.in: New NSProcessInfo stuff
	* Headers/NSObject.h: Remove fake-main include - use GSConfig.h